--- a/result.html
+++ b/result.html
@@ -7,7 +7,7 @@
 	<title>性格测试</title>
 	<link rel="stylesheet" href="css/base.css">
 	<link rel="stylesheet" href="css/animate.min.css">
-	<link rel="stylesheet" href="css/swiper-3.3.1.min.css">
+	<!-- <link rel="stylesheet" href="css/swiper-3.3.1.min.css"> -->
 	<link rel="stylesheet" href="css/main.css">
 	<style>
 		* {
@@ -33,13 +33,11 @@
 	</style>
 </head>
 
-<body >
+<body>
 	<div style="max-width:640px; margin:0 auto; height:100%;">
-		<div class="swiper-container">
-			<div class="swiper-wrapper">
-				<div class="swiper-slide result">
-						<div class="bg">
-								<div class="mark">
+		<div class="result"style="height: 100%;">
+			<div class="bg" style="height: 100%;">
+				<!-- <div class="mark">
 									<div class="mjtBox">
 											<div class="mjt">
 													<img src="images/755778385856302823.jpg" alt="">
@@ -47,50 +45,52 @@
 									</div>
 									<div class="fenx">请点击右上角<br>分享给好友</div>
 									<div><a href="http://weixin.qq.com/r/W0SZgdbEpovZrZLi9xFJ">进入公众号领优惠卷</a></div>
-								</div>
-								<div class="reBox">
-									<h3><span class="animated flip"></span>,魔法转动，您对应的蝴蝶仙子是：</h3>
-									<div class="huname animated flipInY">
-										<div>
-											爱神凤蝶
-										</div>
-									</div>
-									<div class="imgBox animated rollIn">
-										<img src="images/1爱神凤蝶.png" alt="">
-									</div>
-									<div class="content animated bounceInUp">
-										<div>
-											你高度敏感，有一种难能可贵的善良，它会使在心灵层面上与他人产生共鸣。
-						你有审美与创造力，有艺术家气质。你总会想要建立或改变些什么，也许是艺术，也许是理论，或者仅仅是工作或生活方式。
-						你比较喜欢独处，想要留在一个安静的地方，远离世界的繁华喧嚣动荡。这会使你心如止水，从而看清更多事物的本质。
-										</div>
-									</div>
-								</div>
-								<div class="btnBox">
-									<div class="again">
-						
-									</div>
-									<div class=save>
-										<a href="" download></a>
-									</div>
-								</div>
-								<div class="db">
-									<div class="code">
-										<img src="images/二维码.jpg" alt="">
-									</div>
-									<div class="wz">
-										长按二维码关注公众号凭此图即可在
-						活动当天领取蝴蝶馆/美食节优惠立
-						减，最高可减10元哦！
-									</div>
-								</div>
-								<div class="jt">
-									<div class="animated bounce"></div>
-								</div>
-							</div>
+								</div> -->
+				<div class="reBox">
+					<h3 style="color: #4e3e25;"><span class="animated flip"style="color: black;"></span>，为你推荐:</h3>
+					<div class="huname animated flipInY">
+						<div>
+							爱神凤蝶
+						</div>
+					</div>
+					<div class="imgBox animated rollIn">
+						<img src="images/1爱神凤蝶.png" alt="">
+					</div>
+					<div class="content animated bounceInUp">
+						<div style="color: #4e3e25;">
+							你高度敏感，有一种难能可贵的善良，它会使在心灵层面上与他人产生共鸣。
+							你有审美与创造力，有艺术家气质。你总会想要建立或改变些什么，也许是艺术，也许是理论，或者仅仅是工作或生活方式。
+							你比较喜欢独处，想要留在一个安静的地方，远离世界的繁华喧嚣动荡。这会使你心如止水，从而看清更多事物的本质。
+						</div>
+					</div>
 				</div>
+				<div class="btnBox">
+					<a href="/index.html">
+						<div class="again">
 
-				<div class="swiper-slide end">
+						</div>
+					</a>
+					<!-- <div class=save>
+						<a href="" download></a>
+					</div> -->
+				</div>
+				<!-- <div class="db">
+					<div class="code">
+						<img src="images/二维码.jpg" alt="">
+					</div>
+					<div class="wz">
+						长按二维码关注公众号凭此图即可在
+		活动当天领取蝴蝶馆/美食节优惠立
+		减，最高可减10元哦！
+					</div>
+				</div>
+				<div class="jt">
+					<div class="animated bounce"></div>
+				</div> -->
+			</div>
+		</div>
+
+		<!-- <div class="swiper-slide end">
 						<div class="bg">
 								<div class="luoma">
 									<img src="images/197927189993889400.jpg" alt="">
@@ -132,14 +132,13 @@
 											</div>
 										</div>
 						</div>
-					</div>
-	
-			</div>
-		</div>
+					</div> -->
+
 	</div>
+
 	<script src="js/jquery.min-3.1.js"></script>
-	
-<script src="https://cdn.bootcss.com/html2canvas/0.4.1/html2canvas.js"></script> 
+
+	<script src="https://cdn.bootcss.com/html2canvas/0.4.1/html2canvas.js"></script>
 	<script src="js/swiper-3.3.1.min.js"></script>
 	<script src="js/data.js"></script>
 	<script src="js/main.js"></script>
