--- a/answer.html
+++ b/answer.html
@@ -18,6 +18,7 @@
 		</div>
 		<!-- <a style="color: #fff; position: absolute;left: 0;top: 0;z-index: 1000;" href="https://mp.weixin.qq.com/mp/profile_ext?action=home&__biz=MzIwNTI1MjQ5Mw==&scene=124#wechat_redirect">aaaaaaaaaaaaaaaaaaa</a> -->
 		<div class="answerBox">
+			<div class='br'></div>
 			<div class="animatedBox">
 				<div class="answerA animated rollIn">
 					看到路边有人乞讨，在有零钱的情况下，你一般会给多少钱？
@@ -30,6 +31,10 @@
 		</div>
 		<div class="nexBtn">
 
+		</div>
+		<div class="hailang">
+			<img src="images/hl1.png" alt="" class="imgg">
+			<img src="images/hl2.png" alt="" class="imggg">
 		</div>
 	</div>
 	<script src="js/jquery.min-3.1.js"></script>
