--- a/answer/answer.html
+++ b/answer/answer.html
@@ -5,10 +5,10 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no">
 	<title>性格测试</title>
-	<link rel="stylesheet" href="/css/base.css">
-	<link rel="stylesheet" href="/css/animate.min.css">
-	<link rel="stylesheet" href="/css/swiper-3.3.1.min.css">
-	<link rel="stylesheet" href="/css/main-fzy.css">
+	<link rel="stylesheet" href="css/base.css">
+	<link rel="stylesheet" href="css/animate.min.css">
+	<link rel="stylesheet" href="css/swiper-3.3.1.min.css">
+	<link rel="stylesheet" href="css/main.css">
 </head>
 
 <body class="answer">
