--- a/result.html
+++ b/result.html
@@ -34,7 +34,7 @@
 </head>
 
 <body>
-	<div style="max-width:640px; margin:0 auto; height:100%;">
+	<div style="margin:0 auto; height:100%;">
 		<div class="result"style="height: 100%;">
 			<div class="bg" style="height: 100%;">
 				<!-- <div class="mark">
@@ -53,7 +53,7 @@
 							爱神凤蝶
 						</div>
 					</div>
-					<div class="imgBox animated rollIn">
+					<div class="imgBox animated rollIn" style="margin-bottom: 50px;">
 						<img src="images/1爱神凤蝶.png" alt="">
 					</div>
 					<div class="content animated bounceInUp">
