Revert "Remove unused images"
This reverts commit c5cf2e5fd6d9f88a6fe87c3a9c30b6ac2103e04b.

--- a/result.html
+++ b/result.html
@@ -35,7 +35,7 @@
 
 
 <body>
-	<div style="margin:0 auto; height:100%;">
+	<div style="max-width:640px; margin:0 auto; height:100%;">
 		<div class="result"style="height: 100%;">
 			<div class="bg" style="height: 100%;">
 				<!-- <div class="mark">
@@ -56,7 +56,7 @@
 							爱神凤蝶
 						</div>
 					</div>
-					<div class="imgBox animated rollIn" style="margin-bottom: 50px;">
+					<div class="imgBox animated rollIn">
 						<img src="images/1爱神凤蝶.png" alt="">
 					</div>
 					<div class="content animated bounceInUp">
