清除冗余代码

--- a/result.html
+++ b/result.html
@@ -50,7 +50,7 @@
 					<h3 style="color: #4e3e25;"><span class="animated flip"style="color: black;"></span>，为你推荐:</h3>
 					<div class="huname animated flipInY">
 						<div>
-							爱神凤蝶
+							一杯奶茶
 						</div>
 					</div>
 					<div class="imgBox animated rollIn" style="margin-bottom: 50px;">
