--- a/index.html
+++ b/index.html
@@ -6,16 +6,12 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no">
 	<title>性格测试</title>
 	<link rel="stylesheet" href="css/base.css">
-	<link rel="stylesheet" href="css/animate.min.css">
 	<link rel="stylesheet" href="css/main.css">
 </head>
 
 <body class="st">
 	<div class="bg">
-		<!-- <div>
-			<img src="/images/banner.png"style="height: 60px;">
-			<img src="/images/banner-text.png" id="banner-text" style="height: 60px;">
-		</div> -->
+
 		<div class="qcdb animated" >
 			<img src="images/logo.png" >
 		</div>
@@ -43,7 +39,7 @@
 	<script src="js/jquery.min-3.1.js"></script>
 	<script src="js/main.js"></script>
 	<script>
-		app.start();
+		jsFunction.start();
 	</script>
 </body>
 
