--- a/result.html
+++ b/result.html
@@ -6,8 +6,6 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no">
 	<title>性格测试</title>
 	<link rel="stylesheet" href="css/base.css">
-	<link rel="stylesheet" href="css/animate.min.css">
-	<!-- <link rel="stylesheet" href="css/swiper-3.3.1.min.css"> -->
 	<link rel="stylesheet" href="css/main.css">
 	<style>
 		* {
@@ -37,26 +35,17 @@
 	<div style="margin:0 auto; height:100%;">
 		<div class="result"style="height: 100%;">
 			<div class="bg" style="height: 100%;">
-				<!-- <div class="mark">
-									<div class="mjtBox">
-											<div class="mjt">
-													<img src="images/755778385856302823.jpg" alt="">
-												</div>
-									</div>
-									<div class="fenx">请点击右上角<br>分享给好友</div>
-									<div><a href="http://weixin.qq.com/r/W0SZgdbEpovZrZLi9xFJ">进入公众号领优惠卷</a></div>
-								</div> -->
 				<div class="reBox">
-					<h3 style="color: #4e3e25;"><span class="animated flip"style="color: black;"></span>，为你推荐:</h3>
-					<div class="huname animated flipInY">
+					<h3 style="color: #4e3e25;"><span class="animated flip"style="color: black;"></span>为你推荐:</h3>
+					<div class="tea-name animated flipInY">
 						<div>
 							一杯奶茶
 						</div>
 					</div>
 					<div class="imgBox animated rollIn" style="margin-bottom: 50px;">
-						<img src="images/1爱神凤蝶.png" alt="">
+						<img src="" alt="">
 					</div>
-					<div class="content animated bounceInUp">
+					<div class="content animated bounceInUp" style="overflow: hidden;">
 						<div style="color: #4e3e25;">
 							你高度敏感，有一种难能可贵的善良，它会使在心灵层面上与他人产生共鸣。
 							你有审美与创造力，有艺术家气质。你总会想要建立或改变些什么，也许是艺术，也许是理论，或者仅仅是工作或生活方式。
@@ -70,81 +59,19 @@
 
 						</div>
 					</a>
-					<!-- <div class=save>
-						<a href="" download></a>
-					</div> -->
+
 				</div>
-				<!-- <div class="db">
-					<div class="code">
-						<img src="images/二维码.jpg" alt="">
-					</div>
-					<div class="wz">
-						长按二维码关注公众号凭此图即可在
-		活动当天领取蝴蝶馆/美食节优惠立
-		减，最高可减10元哦！
-					</div>
-				</div>
-				<div class="jt">
-					<div class="animated bounce"></div>
-				</div> -->
+
 			</div>
 		</div>
-
-		<!-- <div class="swiper-slide end">
-						<div class="bg">
-								<div class="luoma">
-									<img src="images/197927189993889400.jpg" alt="">
-								</div>
-								<div class="huodong">
-									<div>活动内容</div>
-								</div>
-								<div class="content">
-										<span>武汉首届</span>蝴蝶花卉文化艺术节、环球美食嘉年华<br>
-										罗马春天<span>奥特莱斯</span>春夏疯抢购物节<br>
-										三节狂欢不停歇！<br>
-								</div>
-								<div class="content">
-										五万只活蝴蝶，天下第一龙虾锅，<br>
-										奥莱低至<span>1折</span>！购物<span></span>再<span>送280</span>！<br>
-										万只彩蝶翻飞光谷，就等你来！<br>
-										罗马春天·奥特莱斯给你一个别样春天！<br>
-									</div>
-									<div class="huodong data">
-											<div>时间地点</div>
-										</div>
-									<div class="content">
-											时间：<span>4.29</span>日至<span>6.3</span>日<br>
-											地点：武汉市罗马春天奥特莱斯（江夏大道56号）<br>
-											咨询电话：<span>027-66662998</span>
-									</div>
-									<div class="imgBox">
-										<div class="img1 animated bounceInLeft"></div>
-										<div class="img2 animated bounceInRight"></div>
-									</div>
-									<div class="db">
-											<div class="code">
-												<img src="images/二维码.jpg" alt="">
-											</div>
-											<div class="wz">
-												长按二维码关注公众号凭此图即可在
-								活动当天领取蝴蝶馆/美食节优惠立
-								减，最高可减10元哦！
-											</div>
-										</div>
-						</div>
-					</div> -->
 
 	</div>
 
 	<script src="js/jquery.min-3.1.js"></script>
-
-	<script src="https://cdn.bootcss.com/html2canvas/0.4.1/html2canvas.js"></script>
-	<script src="js/swiper-3.3.1.min.js"></script>
 	<script src="js/data.js"></script>
 	<script src="js/main.js"></script>
 	<script>
-		app.answer();
-		app.result();
+		jsFunction.result();
 	</script>
 
 </body>
