--- a/answer/answer.html
+++ b/answer/answer.html
@@ -6,17 +6,16 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no">
 	<title>性格测试</title>
 	<link rel="stylesheet" href="css/base.css">
-	<link rel="stylesheet" href="css/animate.min.css">
-	<link rel="stylesheet" href="css/swiper-3.3.1.min.css">
 	<link rel="stylesheet" href="css/main.css">
 </head>
 
 <body class="answer">
+
+
 	<div class="bg">
 		<div class="huan">
 			<img src="images/huan.png" alt="">
 		</div>
-		<!-- <a style="color: #fff; position: absolute;left: 0;top: 0;z-index: 1000;" href="https://mp.weixin.qq.com/mp/profile_ext?action=home&__biz=MzIwNTI1MjQ5Mw==&scene=124#wechat_redirect">aaaaaaaaaaaaaaaaaaa</a> -->
 		<div class="answerBox">
 			<div class='br'></div>
 			<div class="animatedBox">
@@ -41,7 +40,7 @@
 	<script src="js/data.js"></script>
 	<script src="js/main.js"></script>
 	<script>
-		app.answer2();
+		answer.answer();
 	</script>
 
 </body>
