Removing more useless file

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no">
 	<title>性格测试</title>
-	<link rel="stylesheet" href="css/base.css">
+	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/main.css">
 </head>
 
@@ -24,7 +24,7 @@
 						<h2>请输入你的姓名</h2>
 						<input type="text" maxlength="10">
 					</div>
-					<div class="djks animated fadeInLeftBig">
+					<div class="nameInputPopover animated fadeInLeftBig">
 						<img src="/images/start-test.png" alt="">
 					</div>
 		</div>
