--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body class="st">
 	<div class="bg">
 
-		<div class="qcdb animated" >
+		<div class="qcdb " >
 			<img src="images/logo.png" >
 		</div>
 		
@@ -20,7 +20,7 @@
 			<img src="/images/button.png" alt="">
 		</div>
 		<div class="mark">
-				<div class="nameInput animated swing">
+				<div class="nameInput  ">
 						<h2>请输入你的姓名</h2>
 						<input type="text" maxlength="10">
 					</div>
