--- a/result.html
+++ b/result.html
@@ -36,20 +36,18 @@
 		<div class="result"style="height: 100%;">
 			<div class="bg" style="height: 100%;">
 				<div class="reBox">
-					<h3 style="color: #4e3e25;"><span class="animated flip"style="color: black;"></span>为你推荐:</h3>
-					<div class="tea-name animated flipInY">
+					<h3 style="color: #4e3e25;"><span class="animated flip"style="color: black;"></span>,为你推荐:</h3>
+					<div class="tea-name  ">
 						<div>
-							一杯奶茶
+							
 						</div>
 					</div>
-					<div class="imgBox animated rollIn" style="margin-bottom: 50px;">
+					<div class="imgBox  " style="margin-bottom: 50px;">
 						<img src="" alt="">
 					</div>
-					<div class="content animated bounceInUp" style="overflow: hidden;">
+					<div class="content  " style="overflow:visible;">
 						<div style="color: #4e3e25;">
-							你高度敏感，有一种难能可贵的善良，它会使在心灵层面上与他人产生共鸣。
-							你有审美与创造力，有艺术家气质。你总会想要建立或改变些什么，也许是艺术，也许是理论，或者仅仅是工作或生活方式。
-							你比较喜欢独处，想要留在一个安静的地方，远离世界的繁华喧嚣动荡。这会使你心如止水，从而看清更多事物的本质。
+							
 						</div>
 					</div>
 				</div>
