--- a/cookie.html
+++ b/cookie.html
@@ -12,7 +12,7 @@
 <body class="st">
 	<div class="bg">
 
-		<span>To use this site, please enable cookie</span>
+		<span>To use this site, please enable cookie and refresh</span>
 		<button class="btn">OK</button>
 		
 	</div>
