--- a/cookie.html
+++ b/cookie.html
@@ -12,7 +12,8 @@
 <body class="st">
 	<div class="bg">
 
-		<span>To use this site, please enable cookie and refresh</span>
+		<h5>你需要启用Cookie才能正常使用此站点</h5>
+		<h6>你可能是打开了隐身模式，退出隐身模式以正常使用</h6>
 		<button class="btn">OK</button>
 		
 	</div>
