--- a/cookie.html
+++ b/cookie.html
@@ -10,8 +10,7 @@
 <body class="st">
 	<div class="bg">
 
-		<h5>你需要启用Cookie才能正常使用此站点</h5>
-		<h6>你可能是打开了隐身模式，退出隐身模式以正常使用</h6>
+		<h5>你需要启用Cookie才能正常使用此站点。如果你会禁用Cookie，你也应该会启用Cookie。</h5>
 		<button class="btn">OK</button>
 		
 	</div>
